{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "08bf0e76-e4df-4381-9232-a106aaef8ea5",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "c493f7a3-93c3-44ee-9133-6c4159c44c53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "752351b2-95ee-40e5-9caa-ccbfecd2b333",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "f88329ab-5116-4b21-8425-c7af892ac342",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Self Destruct",
                    "type": "Button",
                    "id": "55689b42-67a0-493f-a95a-d92409a79d4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Charge Beam",
                    "type": "Button",
                    "id": "d6a63de4-3bde-4ff1-b402-04902a7fc2e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=2.5)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "36a0ad2c-ca91-4fa8-8eea-e64453990b75",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "82732e34-2f75-4010-a47f-11598684689f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c33b8aba-aeee-4157-8e99-fe567b56e4e4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "34f1afbc-5f66-4948-bc12-155f91e1768e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c680a4c9-54c8-4c85-b91c-dcf6810a3e89",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2f324b82-e844-41e1-8c97-a5e948bc92fb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c057cc24-a1a8-4aae-932b-be9feef7e136",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "745e870b-f411-46cb-812f-7e0eb8bc63bc",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Self Destruct",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "df97c566-20f9-4472-b045-4b60387364ed",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Self Destruct",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "c545c125-7660-4571-b441-be30e6d2cc0e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Self Destruct",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1b75cc60-a216-405e-9e3c-86c48ca84597",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Charge Beam",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "419336d1-6010-4a6e-b7af-fb028abbcd57",
            "actions": [
                {
                    "name": "ChangeColor",
                    "type": "Button",
                    "id": "381e0b97-ff50-480d-a1e2-9e745f9570e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "831cf64f-5282-4edf-b8a1-bd81fcbd3422",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1a4d91e3-2758-4da7-b5f9-eefcad132eb4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeColor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "062256fb-3527-4d25-bf8f-757ffbeb068c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3f21c559-4df6-472d-80c9-7b30427193cc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "df4e563d-b838-4bcf-af5e-dfa03742a0fb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "657572e5-f2bd-4f72-82df-1336749fd735",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "56afbc66-5789-4269-ae28-4a69e2663ac3",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ed21c4de-c868-4da8-9e52-aecbb145cb0f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Ball",
            "id": "3fd55cff-a5e8-4ced-8d7f-996e14c5febf",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "2ce18e3f-2d26-43e3-ae2f-28f637a534c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "103404e4-1921-4d0e-8e67-e8629f0fd92e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MobileCube",
            "id": "fc886a07-93d0-414b-b899-98b98e199f22",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "00232261-5917-4052-8063-b97083c94417",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cd29c9bd-64ed-4cbb-be37-b9ebcbeab283",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ChargeBar",
            "id": "8e8af4c0-6f35-4f78-b057-62ac9160fadb",
            "actions": [
                {
                    "name": "Charge",
                    "type": "Button",
                    "id": "14e3a69e-d6d4-4f1d-a54b-4442b40b1452",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "75f09c2e-4d27-4593-896c-5d39dec84993",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Charge",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}